# django-todo

./: .djlintrc  .dockerignore  .gitignore  pyproject.toml  requirements.txt  startup.sh  tmux_profile.yml  tmuxp.yml
.github/workflows/: feature-azure-cicd_django-todo-webapp-dev.yml
azure/: deploy.sh  main.bicep  teardown.sh
azure/local-git-method/: config.sh
docker/: Dockerfile  docker-compose.yml
myproject/: settings.py  urls.py
static/css/: base.css
static/js/: base.js
staticfiles/: staticfiles.json
staticfiles/css/: base.8996865872b5.css.br  base.css
staticfiles/js/: base.222b0620fa21.js.br
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_author.py  0003_alter_task_author.py  0004_task_created_on_task_description_task_due_on_and_more.py  0005_task_priority.py  0006_alter_task_priority_comment.py  0007_alter_task_created_on_alter_task_modified_on.py
templates/: base.html  home.html  task_delete.html  task_detail.html  task_new.html  task_update.html
templates/registration/: login.html  signup.html
templates/tasks/: task_detail.html
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_age.py
