[project]
name = "django-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise[brotli]>=6.9.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "djlint>=1.36.4",
]
